Fix overflowing contact details in "Robyn's Contact Information"
R.e. https://github.com/multnomah-fellowship/planning/issues/93

This fixes the contact details to not wrap by making the dropdown body
instead scrollable when its contents overflow. Since the contents didn't
technically overflow (just wrapped), setting `white-space: nowrap` in
the contact list link is required to make them actually overflow.

--- a/app/assets/components/dropdown/index.css.scss
+++ b/app/assets/components/dropdown/index.css.scss
@@ -41,6 +41,7 @@
   @extend %app-typography--body-2;
 
   margin: 20px;
+  overflow: auto;
 }
 
 .app-dropdown__hidden {
