--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -254,6 +254,7 @@ strong {
 .app-contact-list__link {
   display: block;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .app-contact-list__icon {
